static/css/style.css
body {
	padding-top: 70px;
    padding-left: 0px;
    padding-right: 0px;
}
.navbar-fixed-top {
	position: fixed;
	margin: 0;
}
.navbar-fixed-top .navbar-inner {
	padding-left: 0;
	padding-right: 0;
}
.sidebar-nav .btn {
	margin: 5px 0;
	min-width: 100px;
}
@media (max-width: 979px) {
	.sidebar-nav .nav-list {
		padding: 0;
	}
	.sidebar-nav li.nav-header {
		display: none;
	}
	.sidebar-nav li {
		float: left;
		margin-right: 15px;
	}
}
body.install{
    padding-top:20px;
}
.label-status-on{
    background-color: #468847;
}
.label-status-off{
   background-color: #B94A48;
}
.label-status-warning{
   background-color: #FAA732;
}
.label a{
    color:#FFF;
    text-decoration:none;
}
.footer{
    margin-top:20px;
    border-top:1px solid #EEEEEE;
    padding-top:10px;
}
.footer a{
    font-weight:bold;
}
div.tabbable ul.nav-tabs li{
    font-weight:bold;
}
legend{
    border-color: -moz-use-text-color -moz-use-text-color #CCCCCC;
}
.form-actions {
    background-color: transparent;
}

.form-signin {
	max-width: 300px;
	padding: 19px 29px 29px;
	margin: 0 auto 20px;
	background-color: #fff;
	border: 1px solid #e5e5e5;
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
	box-shadow: 0 1px 2px rgba(0,0,0,.05);
}
.form-signin .form-signin-heading,
.form-signin .checkbox {
	margin-bottom: 10px;
}
.form-signin input[type="text"],
.form-signin input[type="password"] {
	font-size: 16px;
	height: auto;
	margin-bottom: 15px;
	padding: 7px 9px;
}

.dropdown-menu span {
  display: block;
  padding: 3px 15px;
  clear: both;
  font-weight: normal;
  line-height: 18px;
  color: #333333;
  white-space: nowrap;
}

#flashmessage {
	max-width: 350px;
	margin: auto;
	margin-bottom: 18px;
}

.oce-first{
	background-color:#eee;
}

